Changelog:

8.29.13
Added animation for going back from team select to game mode select
Added new graphics for score and timer in gameplaystate

8.28.13
Added Game Start animation
Added graphics for mode select and team select

8.27.13
Added many graphics to character select screen

8.26.13
Fixed goal scoring to make sure proper team score gets incremented
Fixed gameplaystate to now take data values rather than config values
Fullscreen now takes native height and width rather than resolution settings
Implemented resolution list rather than user incrementing height and width
Got rid of "Terrible terrible things" (see 8.24.13)!!!!! :)
Controller buttons now work on button press instead of button down
Controllers now take D-Pad input in menus, also working on button press
Fixed bug where dropping out players would override other players when signing back in
Gamemode Setup menu now displays "Unlimited" properly when choosing to have no time/score limit
Bug fixes, mostly related to Back and Neutron
Player select screen icons added

8.25.13
PlayerNeo now slows game timer

8.24.13
PlayerSetupMenu, GamemodeSetupMenu, TeamSetupMenu now all are functional and have prototyped UI.
Gameplaystate now is initialized based on data set in GlobalData from the setup menus.
Terrible terrible things have happened, need to fix soon or we'll forget and the world will end. See Todo.
Added time and score limits in GameplayState
Added placeholder GameOverState

8.22.13
Removed vsync and set minimum delta to 1 (previous was 24). Vastly increased framerate and smoothness.
Sorted out attendant bugs, mostly related to not scaling by delta correctly in update methods.
Minor audiovisual bugfixes
Added lore

8.21.13
PlayerBack slows when turning. Speed lost directly proportional to degrees turned. Values might be too nerfed now, needs balancing.
PlayerBack rotation code made incredibly smarter. Should have no more direction switches when rotating too fast or wrong way throws.